# WebScrapper_Python

./: README.md  exporter.py  indeed_scrapper.py  jobs.csv  main.py  pyproject.toml  so_scrapper.py
templates/: home.html  report.html
